examples/invalid/22_type_alias_multi_layer_parameter_header.lane
// Invalid: type aliases allow one parameter header layer only.

module Examples.Invalid22
pub type Result[E][A] = Int

pub let answer : Int = 42
